--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.statemachine:spring-statemachine-core:2.4.0'
+	compileOnly 'org.projectlombok:lombok:1.18.16'
+	annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
 	testImplementation 'org.springframework.statemachine:spring-statemachine-core:2.4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+	testCompile "org.mockito:mockito-core:2.+"
+	testCompileOnly 'org.projectlombok:lombok:1.18.16'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
 test {
