--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	testImplementation 'org.springframework.statemachine:spring-statemachine-core:2.4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+	testImplementation 'org.apache.commons:commons-math3:3.6.1'
 	testImplementation 'org.awaitility:awaitility:4.1.0'
 	testCompile "org.mockito:mockito-core:2.+"
 	testCompileOnly 'org.projectlombok:lombok:1.18.16'
